refactor: use getFirst() instead